# doludock

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
packaging/: doludock.iss
src/: App.cpp  App.h  Common.h  FolderModel.cpp  FolderModel.h  FolderWatcher.cpp  FolderWatcher.h  KeyboardHook.cpp  KeyboardHook.h  OverlayWindow.cpp  OverlayWindow.h  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h  UpdateChecker.cpp  UpdateChecker.h  app.manifest  app.rc  main.cpp  resource.h
